# Obsidian

./: .gitignore  Anchor.toml  README.md  bids_dump.txt  build_log.txt  build_output.txt  deploy_devnet.ps1  deploy_devnet.sh.save  launch_dump.txt  launch_dump_utf8.txt  package-lock.json  package.json  tsconfig.json  win_keypair.json
arcium/: simulation.ts
docs/: CONFIDENTIAL_TOKENS.md  DAO_GOVERNANCE.md  DEPLOYMENT_GUIDE.md  SECURITY_AUDIT.md
programs/obsidian/: Cargo.toml
programs/obsidian/src/: lib.rs
scripts/: build_windows.bat  check-state.ts  check_launch_state.js  check_rustc.bat  close_launch_attempt.js  cypher-node.js  cypher-node.ts  debug-authority.ts  diagnose_rustc.bat  final_fix_and_deploy.bat  fix_and_build.bat  force-allocate.ts  fund-user.js  fund-user.ts  fund_pool.js  initialize-devnet.js  initialize-devnet.ts  inspect_bids.js  inspect_launch.js  manual_install_tools.bat  mint-to-user.ts  mint-to.ts  nuclear_build.bat  patch_idl.js  patch_idl_types.js  patch_seeds.js  patch_seeds_fix.js  recover_funds.bat  reset_launch.bat  run-cypher-demo.ts  simple_list.js  verbose-allocate.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/governance/: page.tsx
src/components/: AppWalletProvider.tsx  BidForm.tsx  Hero.tsx  Navbar.tsx
src/hooks/: useProgram.ts
src/lib/: arcium.ts
src/utils/: constants.ts  obsidian-idl.json
tests/: obsidian.ts
