[package]
name = "obsidian"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "obsidian"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"

anchor-spl = { version = "0.29.0", features = ["token_2022"] }
spl-token-2022 = { version = "1.0.0", default-features = false, features = ["no-entrypoint"] }

